# POGL

./: .gitignore  CMakeLists.txt  README.md  camera.cpp  camera.h  drop.mtl  fragment.shd  fragmentshader.glsl  house2.mtl  init.cpp  init.h  main.cpp  particles.cpp  particles.h  vertex.shd  vertexshader.glsl  weather.cpp  weather.h
fogShaders/: fragment.glsl  fragment.shd  vertex.glsl
objects/: circle1.mtl  city.mtl
src/: camera.h  main.cc  stb_image.h
